cli/tests/ui/reporter/tau2_docker_compose.stderr
Error:   × docker-compose output cannot enforce separate capabilities for provides
  │ `llm` and `admin_api` in component `/purple_router`: both route to port 80
  │ but have different HTTP paths (/v1 vs /api)
   ╭─[<WORKSPACE_ROOT>/examples/tau2/litellm.json5:7:43]
 6 │       endpoints: [
 7 │         { name: "router", port: 80, path: "/v1" },
   ·                                           ──┬──
   ·                                             ╰── path used by provide `llm`
 8 │         { name: "admin-api", port: 80, path: "/api" },
   ·                                              ───┬──
   ·                                                 ╰── path used by provide `admin_api`
 9 │       ],
   ╰────
  help: Split the endpoints onto different ports, or route both paths through
        an L7 proxy and expose a single provide per port.
